@@ -86,7 +86,7 @@ a.stub {
 	color: #772233;
 }
 a.new, #p-personal a.new {
-	color: #ba0000;
+	color: #cc2200;
 }
 a.new:visited, #p-personal a.new:visited {
 	color: #a55858;
